--- a/front-end/src/components/Signup/Signup.css
+++ b/front-end/src/components/Signup/Signup.css
@@ -1,10 +1,10 @@
-body {
+/* body {
   width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
 .signup-form {
   width: 300px;
