--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,7 +1,16 @@
+/* Start Global Rules */
+html {
+  scroll-behavior: smooth;
+}
+
 *,
 *::before,
 *::after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
@@ -12,4 +21,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ecf2f6 !important;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+/* End Global Rules*/
+
+body {
+  height: 3000px;
 }
