--- a/front-end/src/components/Navbar/Navbar.css
+++ b/front-end/src/components/Navbar/Navbar.css
@@ -1,9 +1,10 @@
-nav {
-  position: relative !important;
+.navbar {
+  position: absolute !important;
   top: 0;
   left: 0;
   width: 100%;
   background-color: #0099e5;
+  z-index: 10000;
 }
 
 @media (max-width: 992px) {
