--- a/front-end/src/components/userProfileComponents/UserProfilePage.css
+++ b/front-end/src/components/userProfileComponents/UserProfilePage.css
@@ -2,9 +2,6 @@
   margin-top: 65.5px;
 }
 
-.user-profile .links-container {
-}
-
 .user-profile .links-container a {
   font-size: 1rem;
   font-weight: bold;
@@ -14,4 +11,11 @@
 
 .user-profile .links-container a:hover {
   color: var(--main-color) !important;
+}
+
+/* Create Event Page */
+
+.user-profile .create-event,
+.user-profile .update-event {
+  padding: 0 0 30px 0;
 }
