--- a/front-end/src/components/Login/Login.css
+++ b/front-end/src/components/Login/Login.css
@@ -8,7 +8,14 @@
 
 .login-form {
   width: 300px;
-  background-color: #eee;
+  background-color: #dee2e6;
   padding: 20px;
   border-radius: 5px;
+}
+
+.auth-form {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
