--- a/front-end/src/components/Signup/Signup.css
+++ b/front-end/src/components/Signup/Signup.css
@@ -8,7 +8,15 @@
 
 .signup-form {
   width: 300px;
-  background-color: #eee;
+  background-color: #dee2e6;
+  border-radius: 10px;
   padding: 20px;
   border-radius: 5px;
+}
+
+.auth-form {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
