--- a/front-end/src/components/EventDetails/EventDetails.css
+++ b/front-end/src/components/EventDetails/EventDetails.css
@@ -7,3 +7,14 @@
 .event-details .col-md-4 {
   align-self: center;
 }
+
+.event-details .eventParent {
+  margin-top: 100px;
+  padding: 20px;
+}
+
+@media (max-width: 768px) {
+  .event-details .eventParent {
+    margin-top: 220px;
+  }
+}
